added some margin on the p text below the h1 tag at the batman.html

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -352,6 +352,7 @@ h1 {
       color:white;
 }
         .info-text {
+            margin-top: 10px;
             font-size: 1.5rem;
             color: white;
             
